summative.moria.Moria.scala.error
Compilation error:
Moria:1: error: not found: type Bolean
var isOVer : Bolean = false
             ^Moria:5: error: not found: value isOver
      isOver = true
      ^